net/05-NetworkPolicy-calico/np/np-06.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: access-company1
spec:
  types:
    - Egress
    - Ingress
  namespaceSelector: 'developer == "company1"'
  ingress:
    - action: Allow
      source:
        namespaceSelector: 'developer == "company1"'
  egress:
    - action: Allow
      destination:
        namespaceSelector: 'developer == "company1"'
